--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-google-fonts-v2": "0.0.6",
     "gatsby-plugin-mdx": "^2.4.0",
     "gatsby-source-filesystem": "^3.4.0",
+    "gatsby-transformer-remark": "^4.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0"
