--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "gatsby": "^3.4.1",
     "gatsby-plugin-google-fonts-v2": "0.0.6",
     "gatsby-plugin-mdx": "^2.4.0",
+    "gatsby-plugin-sharp": "^3.4.2",
+    "gatsby-remark-images": "^5.1.0",
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-transformer-remark": "^4.1.0",
     "react": "^17.0.1",
