--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^3.4.1",
+    "gatsby-image": "^3.4.0",
     "gatsby-plugin-google-fonts-v2": "0.0.6",
     "gatsby-plugin-mdx": "^2.4.0",
     "gatsby-plugin-sharp": "^3.4.2",
     "gatsby-remark-images": "^5.1.0",
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-transformer-remark": "^4.1.0",
+    "gatsby-transformer-sharp": "^3.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0"
