--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
