--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^3.4.1",
-    "gatsby-plugin-google-fonts-v2": "0.0.6",
+    "gatsby-plugin-gatsby-cloud": "^2.5.0",
     "gatsby-plugin-mdx": "^2.4.0",
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sharp": "^3.4.2",
+    "gatsby-plugin-webfonts": "^2.1.0",
     "gatsby-remark-images": "^5.1.0",
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-transformer-remark": "^4.1.0",
