--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby": "^3.4.1",
     "gatsby-plugin-gatsby-cloud": "^2.5.0",
     "gatsby-plugin-mdx": "^2.4.0",
+    "gatsby-plugin-react-helmet": "^4.5.0",
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sharp": "^3.4.2",
     "gatsby-plugin-webfonts": "^2.1.0",
@@ -30,6 +31,7 @@
     "gatsby-transformer-sharp": "^3.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0"
   },
   "devDependencies": {}
