--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^3.4.1",
     "gatsby-plugin-gatsby-cloud": "^2.5.0",
+    "gatsby-plugin-google-gtag": "^3.8.0",
     "gatsby-plugin-manifest": "^3.5.0",
     "gatsby-plugin-mdx": "^2.4.0",
     "gatsby-plugin-react-helmet": "^4.5.0",
