--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@formspree/react": "^2.2.3",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "classnames": "^2.3.2",
     "gatsby": "^3.4.1",
     "gatsby-plugin-gatsby-cloud": "^2.5.0",
     "gatsby-plugin-google-gtag": "^3.8.0",
@@ -36,6 +37,5 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0"
-  },
-  "devDependencies": {}
+  }
 }
