--- a/package.json
+++ b/package.json
@@ -16,26 +16,22 @@
     "deploy": "gatsby build && gh-pages -d public -b main"
   },
   "dependencies": {
-    "@formspree/react": "^2.2.3",
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
+    "@formspree/react": "^2.4.1",
+    "@mdx-js/mdx": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
     "classnames": "^2.3.2",
-    "gatsby": "^3.4.1",
-    "gatsby-plugin-gatsby-cloud": "^2.5.0",
-    "gatsby-plugin-google-gtag": "^3.8.0",
-    "gatsby-plugin-manifest": "^3.5.0",
-    "gatsby-plugin-mdx": "^2.4.0",
-    "gatsby-plugin-react-helmet": "^4.5.0",
-    "gatsby-plugin-react-svg": "^3.0.1",
-    "gatsby-plugin-sharp": "^3.4.2",
-    "gatsby-plugin-webfonts": "^2.1.0",
-    "gatsby-remark-images": "^5.1.0",
-    "gatsby-source-filesystem": "^3.4.0",
-    "gatsby-transformer-remark": "^4.1.0",
-    "gatsby-transformer-sharp": "^3.4.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^4.2.0"
+    "gatsby": "^5.9.0",
+    "gatsby-plugin-gatsby-cloud": "^5.9.0",
+    "gatsby-plugin-manifest": "^5.9.0",
+    "gatsby-plugin-mdx": "^5.9.0",
+    "gatsby-plugin-react-helmet": "^6.9.0",
+    "gatsby-plugin-react-svg": "^3.3.0",
+    "gatsby-plugin-sharp": "^5.9.0",
+    "gatsby-remark-images": "^7.9.0",
+    "gatsby-source-filesystem": "^5.9.0",
+    "gatsby-transformer-remark": "^6.9.0",
+    "gatsby-transformer-sharp": "^5.9.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
