specify node engine

--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "gatsby-transformer-sharp": "^5.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "engines": {
+    "node": "^18.5.0"
   }
 }
