--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
     "classnames": "^2.3.2",
     "gatsby": "^5.9.0",
     "gatsby-plugin-gatsby-cloud": "^5.9.0",
+    "gatsby-plugin-image": "^3.10.0",
     "gatsby-plugin-manifest": "^5.9.0",
     "gatsby-plugin-mdx": "^5.9.0",
     "gatsby-plugin-react-helmet": "^6.9.0",
     "gatsby-plugin-react-svg": "^3.3.0",
-    "gatsby-plugin-sharp": "^5.9.0",
+    "gatsby-plugin-sharp": "^5.10.0",
     "gatsby-remark-images": "^7.9.0",
-    "gatsby-source-filesystem": "^5.9.0",
+    "gatsby-source-filesystem": "^5.10.0",
     "gatsby-transformer-remark": "^6.9.0",
-    "gatsby-transformer-sharp": "^5.9.0",
+    "gatsby-transformer-sharp": "^5.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
